parser.output
State 184 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration declaration_list

    2 declaration_list: %empty
    3                 | declaration_list declaration

    4 declaration: variable_declaration
    5            | function_declaration
    6            | function_definition

    7 variable_declaration: type_id sep_by_comma_declarator ';'
    8                     | type_id '[' constant_expression ']' sep_by_comma_declarator ';'

    9 sep_by_comma_declarator: %empty
   10                        | ',' declarator sep_by_comma_declarator

   11 type: basic_type star_list

   12 type_id: type T_id

   13 star_list: %empty
   14          | '*' star_list

   15 basic_type: "int"
   16           | "char"
   17           | "bool"
   18           | "double"

   19 declarator: T_id
   20           | T_id '[' constant_expression ']'

   21 function_head: type_id '(' ')'
   22              | type_id '(' parameter_list ')'
   23              | "void" T_id '(' ')'
   24              | "void" T_id '(' parameter_list ')'

   25 function_declaration: function_head ';'

   26 parameter_list: parameter sep_by_comma_parameter

   27 sep_by_comma_parameter: %empty
   28                       | ',' parameter sep_by_comma_parameter

   29 parameter: "byref" type_id
   30          | type_id

   31 function_definition: function_head '{' declaration_list statement_list '}'

   32 statement_list: %empty
   33               | statement statement_list

   34 statement: ';'
   35          | expression ';'
   36          | '{' statement_list '}'
   37          | "if" '(' expression ')' statement
   38          | "if" '(' expression ')' statement "else" statement
   39          | label "for" '(' expression_or_empty ';' expression_or_empty ';' expression_or_empty ')' statement
   40          | "continue" ';'
   41          | "continue" T_id ';'
   42          | "break" ';'
   43          | "break" T_id ';'
   44          | "return" expression_or_empty ';'

   45 label: %empty
   46      | T_id ':'

   47 expression_or_empty: %empty
   48                    | expression

   49 expression: no_comma_expression
   50           | no_comma_expression ',' expression

   51 no_comma_expression: T_id
   52                    | '(' expression ')'
   53                    | "true"
   54                    | "false"
   55                    | "NULL"
   56                    | T_int_const
   57                    | T_char_const
   58                    | T_double_const
   59                    | T_string_const
   60                    | T_id '(' ')'
   61                    | T_id '(' expression_list ')'
   62                    | expression '[' expression ']'
   63                    | '&' expression
   64                    | '*' expression
   65                    | '+' expression
   66                    | '-' expression
   67                    | '!' expression
   68                    | expression '*' expression
   69                    | expression '/' expression
   70                    | expression '%' expression
   71                    | expression '+' expression
   72                    | expression '-' expression
   73                    | expression '<' expression
   74                    | expression '>' expression
   75                    | expression "<=" expression
   76                    | expression ">=" expression
   77                    | expression "==" expression
   78                    | expression "!=" expression
   79                    | expression "&&" expression
   80                    | expression "||" expression
   81                    | "++" expression
   82                    | "--" expression
   83                    | expression "++"
   84                    | expression "--"
   85                    | expression '=' expression
   86                    | expression "*=" expression
   87                    | expression "/=" expression
   88                    | expression "%=" expression
   89                    | expression "+=" expression
   90                    | expression "-=" expression
   91                    | '(' type ')' expression
   92                    | expression '?' expression ':' expression
   93                    | "new" type
   94                    | "new" type '[' expression ']'
   95                    | "delete" expression

   96 expression_list: no_comma_expression sep_by_comma_expression

   97 sep_by_comma_expression: %empty
   98                        | ',' no_comma_expression sep_by_comma_expression

   99 constant_expression: expression


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 67
    '%' (37) 70
    '&' (38) 63
    '(' (40) 21 22 23 24 37 38 39 52 60 61 91
    ')' (41) 21 22 23 24 37 38 39 52 60 61 91
    '*' (42) 14 64 68
    '+' (43) 65 71
    ',' (44) 10 28 50 98
    '-' (45) 66 72
    '/' (47) 69
    ':' (58) 46 92
    ';' (59) 7 8 25 34 35 39 40 41 42 43 44
    '<' (60) 73
    '=' (61) 85
    '>' (62) 74
    '?' (63) 92
    '[' (91) 8 20 62 94
    ']' (93) 8 20 62 94
    '{' (123) 31 36
    '}' (125) 31 36
    error (256)
    "bool" (258) 17
    "break" (259) 42 43
    "byref" (260) 29
    "char" (261) 16
    "continue" (262) 40 41
    "delete" (263) 95
    "double" (264) 18
    "else" (265) 38
    "for" (266) 39
    "false" (267) 54
    "if" (268) 37 38
    "int" (269) 15
    "new" (270) 93 94
    "NULL" (271) 55
    "return" (272) 44
    "true" (273) 53
    "void" (274) 23 24
    T_id (275) 12 19 20 23 24 41 43 46 51 60 61
    T_int_const (276) 56
    T_double_const (277) 58
    T_char_const (278) 57
    T_string_const (279) 59
    "==" (280) 77
    "!=" (281) 78
    ">=" (282) 76
    "<=" (283) 75
    "&&" (284) 79
    "||" (285) 80
    "++" (286) 81 83
    "--" (287) 82 84
    "+=" (288) 89
    "-=" (289) 90
    "*=" (290) 86
    "/=" (291) 87
    "%=" (292) 88
    NO_COMMA (293)
    EMPTY_STAR (294)
    ARGLIST (295)
    TYPECAST (296)
    IPLUSPLUS (297)
    IMINUSMINUS (298)
    NEW (299)
    DELETE (300)
    ADDRESS (301)
    DEREF (302)
    PLUSIGN (303)
    MINUSIGN (304)
    NEGATION (305)
    PPLUSPLUS (306)
    PMINUSMINUS (307)


Nonterminals, with rules where they appear

    $accept (73)
        on left: 0
    program (74)
        on left: 1
        on right: 0
    declaration_list (75)
        on left: 2 3
        on right: 1 3 31
    declaration (76)
        on left: 4 5 6
        on right: 1 3
    variable_declaration (77)
        on left: 7 8
        on right: 4
    sep_by_comma_declarator (78)
        on left: 9 10
        on right: 7 8 10
    type (79)
        on left: 11
        on right: 12 91 93 94
    type_id (80)
        on left: 12
        on right: 7 8 21 22 29 30
    star_list (81)
        on left: 13 14
        on right: 11 14
    basic_type (82)
        on left: 15 16 17 18
        on right: 11
    declarator (83)
        on left: 19 20
        on right: 10
    function_head (84)
        on left: 21 22 23 24
        on right: 25 31
    function_declaration (85)
        on left: 25
        on right: 5
    parameter_list (86)
        on left: 26
        on right: 22 24
    sep_by_comma_parameter (87)
        on left: 27 28
        on right: 26 28
    parameter (88)
        on left: 29 30
        on right: 26 28
    function_definition (89)
        on left: 31
        on right: 6
    statement_list (90)
        on left: 32 33
        on right: 31 33 36
    statement (91)
        on left: 34 35 36 37 38 39 40 41 42 43 44
        on right: 33 37 38 39
    label (92)
        on left: 45 46
        on right: 39
    expression_or_empty (93)
        on left: 47 48
        on right: 39 44
    expression (94)
        on left: 49 50
        on right: 35 37 38 48 50 52 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 94 95 99
    no_comma_expression (95)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
        on right: 49 50 96 98
    expression_list (96)
        on left: 96
        on right: 61
    sep_by_comma_expression (97)
        on left: 97 98
        on right: 96 98
    constant_expression (98)
        on left: 99
        on right: 8 20


State 0

    0 $accept: . program $end

    "bool"    shift, and go to state 1
    "char"    shift, and go to state 2
    "double"  shift, and go to state 3
    "int"     shift, and go to state 4
    "void"    shift, and go to state 5

    program               go to state 6
    declaration           go to state 7
    variable_declaration  go to state 8
    type                  go to state 9
    type_id               go to state 10
    basic_type            go to state 11
    function_head         go to state 12
    function_declaration  go to state 13
    function_definition   go to state 14


State 1

   17 basic_type: "bool" .

    $default  reduce using rule 17 (basic_type)


State 2

   16 basic_type: "char" .

    $default  reduce using rule 16 (basic_type)


State 3

   18 basic_type: "double" .

    $default  reduce using rule 18 (basic_type)


State 4

   15 basic_type: "int" .

    $default  reduce using rule 15 (basic_type)


State 5

   23 function_head: "void" . T_id '(' ')'
   24              | "void" . T_id '(' parameter_list ')'

    T_id  shift, and go to state 15


State 6

    0 $accept: program . $end

    $end  shift, and go to state 16


State 7

    1 program: declaration . declaration_list

    $default  reduce using rule 2 (declaration_list)

    declaration_list  go to state 17


State 8

    4 declaration: variable_declaration .

    $default  reduce using rule 4 (declaration)


State 9

   12 type_id: type . T_id

    T_id  shift, and go to state 18


State 10

    7 variable_declaration: type_id . sep_by_comma_declarator ';'
    8                     | type_id . '[' constant_expression ']' sep_by_comma_declarator ';'
   21 function_head: type_id . '(' ')'
   22              | type_id . '(' parameter_list ')'

    ','  shift, and go to state 19
    '('  shift, and go to state 20
    '['  shift, and go to state 21

    $default  reduce using rule 9 (sep_by_comma_declarator)

    sep_by_comma_declarator  go to state 22


State 11

   11 type: basic_type . star_list

    '*'  shift, and go to state 23

    $default  reduce using rule 13 (star_list)

    star_list  go to state 24


State 12

   25 function_declaration: function_head . ';'
   31 function_definition: function_head . '{' declaration_list statement_list '}'

    ';'  shift, and go to state 25
    '{'  shift, and go to state 26


State 13

    5 declaration: function_declaration .

    $default  reduce using rule 5 (declaration)


State 14

    6 declaration: function_definition .

    $default  reduce using rule 6 (declaration)


State 15

   23 function_head: "void" T_id . '(' ')'
   24              | "void" T_id . '(' parameter_list ')'

    '('  shift, and go to state 27


State 16

    0 $accept: program $end .

    $default  accept


State 17

    1 program: declaration declaration_list .
    3 declaration_list: declaration_list . declaration

    "bool"    shift, and go to state 1
    "char"    shift, and go to state 2
    "double"  shift, and go to state 3
    "int"     shift, and go to state 4
    "void"    shift, and go to state 5

    $default  reduce using rule 1 (program)

    declaration           go to state 28
    variable_declaration  go to state 8
    type                  go to state 9
    type_id               go to state 10
    basic_type            go to state 11
    function_head         go to state 12
    function_declaration  go to state 13
    function_definition   go to state 14


State 18

   12 type_id: type T_id .

    $default  reduce using rule 12 (type_id)


State 19

   10 sep_by_comma_declarator: ',' . declarator sep_by_comma_declarator

    T_id  shift, and go to state 29

    declarator  go to state 30


State 20

   21 function_head: type_id '(' . ')'
   22              | type_id '(' . parameter_list ')'

    "bool"    shift, and go to state 1
    "byref"   shift, and go to state 31
    "char"    shift, and go to state 2
    "double"  shift, and go to state 3
    "int"     shift, and go to state 4
    ')'       shift, and go to state 32

    type            go to state 9
    type_id         go to state 33
    basic_type      go to state 11
    parameter_list  go to state 34
    parameter       go to state 35


State 21

    8 variable_declaration: type_id '[' . constant_expression ']' sep_by_comma_declarator ';'

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 54
    no_comma_expression  go to state 55
    constant_expression  go to state 56


State 22

    7 variable_declaration: type_id sep_by_comma_declarator . ';'

    ';'  shift, and go to state 57


State 23

   14 star_list: '*' . star_list

    '*'  shift, and go to state 23

    $default  reduce using rule 13 (star_list)

    star_list  go to state 58


State 24

   11 type: basic_type star_list .

    $default  reduce using rule 11 (type)


State 25

   25 function_declaration: function_head ';' .

    $default  reduce using rule 25 (function_declaration)


State 26

   31 function_definition: function_head '{' . declaration_list statement_list '}'

    $default  reduce using rule 2 (declaration_list)

    declaration_list  go to state 59


State 27

   23 function_head: "void" T_id '(' . ')'
   24              | "void" T_id '(' . parameter_list ')'

    "bool"    shift, and go to state 1
    "byref"   shift, and go to state 31
    "char"    shift, and go to state 2
    "double"  shift, and go to state 3
    "int"     shift, and go to state 4
    ')'       shift, and go to state 60

    type            go to state 9
    type_id         go to state 33
    basic_type      go to state 11
    parameter_list  go to state 61
    parameter       go to state 35


State 28

    3 declaration_list: declaration_list declaration .

    $default  reduce using rule 3 (declaration_list)


State 29

   19 declarator: T_id .
   20           | T_id . '[' constant_expression ']'

    '['  shift, and go to state 62

    $default  reduce using rule 19 (declarator)


State 30

   10 sep_by_comma_declarator: ',' declarator . sep_by_comma_declarator

    ','  shift, and go to state 19

    $default  reduce using rule 9 (sep_by_comma_declarator)

    sep_by_comma_declarator  go to state 63


State 31

   29 parameter: "byref" . type_id

    "bool"    shift, and go to state 1
    "char"    shift, and go to state 2
    "double"  shift, and go to state 3
    "int"     shift, and go to state 4

    type        go to state 9
    type_id     go to state 64
    basic_type  go to state 11


State 32

   21 function_head: type_id '(' ')' .

    $default  reduce using rule 21 (function_head)


State 33

   30 parameter: type_id .

    $default  reduce using rule 30 (parameter)


State 34

   22 function_head: type_id '(' parameter_list . ')'

    ')'  shift, and go to state 65


State 35

   26 parameter_list: parameter . sep_by_comma_parameter

    ','  shift, and go to state 66

    $default  reduce using rule 27 (sep_by_comma_parameter)

    sep_by_comma_parameter  go to state 67


State 36

   95 no_comma_expression: "delete" . expression

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 68
    no_comma_expression  go to state 55


State 37

   54 no_comma_expression: "false" .

    $default  reduce using rule 54 (no_comma_expression)


State 38

   93 no_comma_expression: "new" . type
   94                    | "new" . type '[' expression ']'

    "bool"    shift, and go to state 1
    "char"    shift, and go to state 2
    "double"  shift, and go to state 3
    "int"     shift, and go to state 4

    type        go to state 69
    basic_type  go to state 11


State 39

   55 no_comma_expression: "NULL" .

    $default  reduce using rule 55 (no_comma_expression)


State 40

   53 no_comma_expression: "true" .

    $default  reduce using rule 53 (no_comma_expression)


State 41

   51 no_comma_expression: T_id .
   60                    | T_id . '(' ')'
   61                    | T_id . '(' expression_list ')'

    '('  shift, and go to state 70

    $default  reduce using rule 51 (no_comma_expression)


State 42

   56 no_comma_expression: T_int_const .

    $default  reduce using rule 56 (no_comma_expression)


State 43

   58 no_comma_expression: T_double_const .

    $default  reduce using rule 58 (no_comma_expression)


State 44

   57 no_comma_expression: T_char_const .

    $default  reduce using rule 57 (no_comma_expression)


State 45

   59 no_comma_expression: T_string_const .

    $default  reduce using rule 59 (no_comma_expression)


State 46

   81 no_comma_expression: "++" . expression

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 71
    no_comma_expression  go to state 55


State 47

   82 no_comma_expression: "--" . expression

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 72
    no_comma_expression  go to state 55


State 48

   65 no_comma_expression: '+' . expression

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 73
    no_comma_expression  go to state 55


State 49

   66 no_comma_expression: '-' . expression

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 74
    no_comma_expression  go to state 55


State 50

   64 no_comma_expression: '*' . expression

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 75
    no_comma_expression  go to state 55


State 51

   52 no_comma_expression: '(' . expression ')'
   91                    | '(' . type ')' expression

    "bool"          shift, and go to state 1
    "char"          shift, and go to state 2
    "delete"        shift, and go to state 36
    "double"        shift, and go to state 3
    "false"         shift, and go to state 37
    "int"           shift, and go to state 4
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    type                 go to state 76
    basic_type           go to state 11
    expression           go to state 77
    no_comma_expression  go to state 55


State 52

   63 no_comma_expression: '&' . expression

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 78
    no_comma_expression  go to state 55


State 53

   67 no_comma_expression: '!' . expression

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 79
    no_comma_expression  go to state 55


State 54

   62 no_comma_expression: expression . '[' expression ']'
   68                    | expression . '*' expression
   69                    | expression . '/' expression
   70                    | expression . '%' expression
   71                    | expression . '+' expression
   72                    | expression . '-' expression
   73                    | expression . '<' expression
   74                    | expression . '>' expression
   75                    | expression . "<=" expression
   76                    | expression . ">=" expression
   77                    | expression . "==" expression
   78                    | expression . "!=" expression
   79                    | expression . "&&" expression
   80                    | expression . "||" expression
   83                    | expression . "++"
   84                    | expression . "--"
   85                    | expression . '=' expression
   86                    | expression . "*=" expression
   87                    | expression . "/=" expression
   88                    | expression . "%=" expression
   89                    | expression . "+=" expression
   90                    | expression . "-=" expression
   92                    | expression . '?' expression ':' expression
   99 constant_expression: expression .

    "=="  shift, and go to state 80
    "!="  shift, and go to state 81
    ">="  shift, and go to state 82
    "<="  shift, and go to state 83
    "&&"  shift, and go to state 84
    "||"  shift, and go to state 85
    "++"  shift, and go to state 86
    "--"  shift, and go to state 87
    "+="  shift, and go to state 88
    "-="  shift, and go to state 89
    "*="  shift, and go to state 90
    "/="  shift, and go to state 91
    "%="  shift, and go to state 92
    '='   shift, and go to state 93
    '?'   shift, and go to state 94
    '>'   shift, and go to state 95
    '<'   shift, and go to state 96
    '+'   shift, and go to state 97
    '-'   shift, and go to state 98
    '*'   shift, and go to state 99
    '/'   shift, and go to state 100
    '%'   shift, and go to state 101
    '['   shift, and go to state 102

    $default  reduce using rule 99 (constant_expression)


State 55

   49 expression: no_comma_expression .
   50           | no_comma_expression . ',' expression

    ','  shift, and go to state 103

    $default  reduce using rule 49 (expression)


State 56

    8 variable_declaration: type_id '[' constant_expression . ']' sep_by_comma_declarator ';'

    ']'  shift, and go to state 104


State 57

    7 variable_declaration: type_id sep_by_comma_declarator ';' .

    $default  reduce using rule 7 (variable_declaration)


State 58

   14 star_list: '*' star_list .

    $default  reduce using rule 14 (star_list)


State 59

    3 declaration_list: declaration_list . declaration
   31 function_definition: function_head '{' declaration_list . statement_list '}'

    "bool"          shift, and go to state 1
    "break"         shift, and go to state 105
    "char"          shift, and go to state 2
    "continue"      shift, and go to state 106
    "delete"        shift, and go to state 36
    "double"        shift, and go to state 3
    "false"         shift, and go to state 37
    "if"            shift, and go to state 107
    "int"           shift, and go to state 4
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "return"        shift, and go to state 108
    "true"          shift, and go to state 40
    "void"          shift, and go to state 5
    T_id            shift, and go to state 109
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    ';'             shift, and go to state 110
    '{'             shift, and go to state 111
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    "for"     reduce using rule 45 (label)
    $default  reduce using rule 32 (statement_list)

    declaration           go to state 28
    variable_declaration  go to state 8
    type                  go to state 9
    type_id               go to state 10
    basic_type            go to state 11
    function_head         go to state 12
    function_declaration  go to state 13
    function_definition   go to state 14
    statement_list        go to state 112
    statement             go to state 113
    label                 go to state 114
    expression            go to state 115
    no_comma_expression   go to state 55


State 60

   23 function_head: "void" T_id '(' ')' .

    $default  reduce using rule 23 (function_head)


State 61

   24 function_head: "void" T_id '(' parameter_list . ')'

    ')'  shift, and go to state 116


State 62

   20 declarator: T_id '[' . constant_expression ']'

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 54
    no_comma_expression  go to state 55
    constant_expression  go to state 117


State 63

   10 sep_by_comma_declarator: ',' declarator sep_by_comma_declarator .

    $default  reduce using rule 10 (sep_by_comma_declarator)


State 64

   29 parameter: "byref" type_id .

    $default  reduce using rule 29 (parameter)


State 65

   22 function_head: type_id '(' parameter_list ')' .

    $default  reduce using rule 22 (function_head)


State 66

   28 sep_by_comma_parameter: ',' . parameter sep_by_comma_parameter

    "bool"    shift, and go to state 1
    "byref"   shift, and go to state 31
    "char"    shift, and go to state 2
    "double"  shift, and go to state 3
    "int"     shift, and go to state 4

    type        go to state 9
    type_id     go to state 33
    basic_type  go to state 11
    parameter   go to state 118


State 67

   26 parameter_list: parameter sep_by_comma_parameter .

    $default  reduce using rule 26 (parameter_list)


State 68

   62 no_comma_expression: expression . '[' expression ']'
   68                    | expression . '*' expression
   69                    | expression . '/' expression
   70                    | expression . '%' expression
   71                    | expression . '+' expression
   72                    | expression . '-' expression
   73                    | expression . '<' expression
   74                    | expression . '>' expression
   75                    | expression . "<=" expression
   76                    | expression . ">=" expression
   77                    | expression . "==" expression
   78                    | expression . "!=" expression
   79                    | expression . "&&" expression
   80                    | expression . "||" expression
   83                    | expression . "++"
   84                    | expression . "--"
   85                    | expression . '=' expression
   86                    | expression . "*=" expression
   87                    | expression . "/=" expression
   88                    | expression . "%=" expression
   89                    | expression . "+=" expression
   90                    | expression . "-=" expression
   92                    | expression . '?' expression ':' expression
   95                    | "delete" expression .

    '['  shift, and go to state 102

    $default  reduce using rule 95 (no_comma_expression)


State 69

   93 no_comma_expression: "new" type .
   94                    | "new" type . '[' expression ']'

    '['  shift, and go to state 119

    $default  reduce using rule 93 (no_comma_expression)


State 70

   60 no_comma_expression: T_id '(' . ')'
   61                    | T_id '(' . expression_list ')'

    "delete"        shift, and go to state 36
    "false"         shift, and go to state 37
    "new"           shift, and go to state 38
    "NULL"          shift, and go to state 39
    "true"          shift, and go to state 40
    T_id            shift, and go to state 41
    T_int_const     shift, and go to state 42
    T_double_const  shift, and go to state 43
    T_char_const    shift, and go to state 44
    T_string_const  shift, and go to state 45
    "++"            shift, and go to state 46
    "--"            shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    ')'             shift, and go to state 120
    '&'             shift, and go to state 52
    '!'             shift, and go to state 53

    expression           go to state 121
    no_comma_expression  go to state 122
    expression_list      go to state 123


State 71

   62 no_comma_expression: expression . '[' expression ']'
   68                    | expression . '*' expression
   69                    | expression . '/' expression
   70                    | expression . '%' expression
   71                    | expression . '+' expression
   72                    | expression . '-' expression
   73                    | expression . '<' expression
   74                    | expression . '>' expression
   75                    | expression . "<=" expression
   76                    | expression . ">=" expression
   77                    | expression . "==" expression
   78                    | expression . "!=" expression
   79                    | expression . "&&" expression
   80                    | expression . "||" expression
   81                    | "++" expression .
   83                    | expression . "++"
   84                    | expression . "--"
   85                    | expression . '=' expression
   86                    | expression . "*=" expression
   87                    | expression . "/=" expression
   88                    | expression . "%=" expression
   89                    | expression . "+=" expression
   90                    | expression . "-=" expression
   92                    | expression . '?' expression ':' expression

    "++"  shift, and go to state 86
    "--"  shift, and go to state 87
    '['   shift, and go to state 102

    $default  reduce using rule 81 (no_comma_expression)


State 72

   62 no_comma_expression: expression . '[' expression ']'
   68                    | expression . '*' expression
   69                    | expression . '/' expression
   70                    | expression . '%' expression
   71                    | expression . '+' expression
   72                    | expression . '-' expression
   73                    | expression . '<' expression
   74                    | expression . '>' expression
   75                    | expression . "<=" expression
   76                    | expression . ">=" expression
   77                    | expression . "==" expression
   78                    | expression . "!=" expression
   79                    | expression . "&&" expression
   80                    | expression . "||" expression
   82                    | "--" expression .
   83                    | expression . "++"
   84                    | expression . "--"
   85                    | expression . '=' expression
   86                    | expression . "*=" expression
   87                    | expression . "/=" expression
   88                    | expression . "%=" expression
   89                    | expression . "+=" expression
   90                    | expression . "-=" expression
   92                    | expression . '?' expression ':' expression

    "++"  shift, and go to state 86
    "--"  shift, and go to state 87
    '['   shift, and go to state 102

    $default  reduce using rule 82 (no_comma_expression)


State 73

   62 no_comma_expression: expression . '[' expression ']'
   65                    | '+' expression .
   68                    | expression . '*' expression
   69                    | expression . '/' expression
   70                    | expression . '%' expression
   71                    | expression . '+' expression
   72                    | expression . '-' expression
   73                    | expression . '<' expression
   74                    | expression . '>' expression
   75                    | expression . "<=" expression
   76                    | expression . ">=" expression
   77                    | expression . "==" expression
   78                    | expression . "!=" expression
   79                    | expression . "&&" expression
   80                    | expression . "||" expression
   83                    | expression . "++"
   84                    | expression . "--"
   85                    | expression . '=' expression
   86                    | expression . "*=" expression
   87                    | expression . "/=" expression
   88                    | expression . "%=" expression
   89                    | expression . "+=" expression
   90                    | expression . "-=" expression
   92                    | expression . '?' expression ':' expression

    '['  shift, and go to state 102

    $default  reduce using rule 65 (no_comma_expression)


State 74

   62 no_comma_expression: expression . '[' expression ']'
   66                    | '-' expression .
   68                    | expression . '*' expression
   69                    | expression . '/' expression
   70                    | expression . '%' expression
   71                    | expression . '+' expression
   72                    | expression . '-' expression
   73                    | expression . '<' expression
   74                    | expression . '>' expression
   75                    | expression . "<=" expression
   76                    | expression . ">=" expression
   77                    | expression . "==" expression
   78                    | expression . "!=" expression
   79                    | expression . "&&" expression
   80                    | expression . "||" expression
   83                    | expression . "++"
   84                    | expression . "--"
   85                    | expression . '=' expression
   86                    | expression . "*=" expression
   87                    | expression . "/=" expression
   88                    | expression . "%=" expression
   89                    | expression . "+=" expression
   90                    | expression . "-=" expression
   92                    | expression . '?' expression ':' expression

    '['  shift, and go to state 102

    $default  reduce using rule 66 (no_comma_expression)


State 75
